Mon Jan 26 11:32:08 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/unittests/Makefile.am:
	* src/ctlib/unittests/cancel.c(added):
	- added test for cancel inside signal

Mon Jan 26 09:44:56 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/ct.c: updated comments

Tue Jan 20 10:55:09 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/read.c: small fixes and comments

Tue Jan 20 02:14:52 PST 2004	Peter Deacon <peterd@iea-software.com>
	* src/odbc/odbc.c:
	- fix SQLDescribe fails with some result sets having no rows
	* src/tds/read.c: backout 1.79 change

Mon Jan 19 11:02:58 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* vms/configure.com:
	- patch from Craig A. Berry for iconv detect problem

Fri Jan 16 22:09:34 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/Makefile.am src/tds/util.c src/tds/net.c(added):
	- added net.c

Fri Jan 16 22:02:42 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/util.c:
	- fix problem setting TDSDUMP=stdout and appending mode
	- limit indentation
	- updating comments

Fri Jan 16 17:37:46 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: use correct constant

Fri Jan 16 07:56:45 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: return SQL_NO_DATA if no data and ODBC3

Thu Jan 15 00:25:58 EST 2004	JK Lowden <jklowden@schemamania.org>
	* doc/htdoc/news.html doc/htdoc/software.html
	- updated for 0.62.1 and RPMs

Wed Jan 14 12:16:33 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* configure.in: set NETDB_REENTRANT if cygwin
	* include/tdsodbc.h src/odbc/odbc.c:
	- detect state testing active statement
	* src/tds/read.c: updated comment style

Tue Jan 13 20:54:44 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c: discard EED info only

Mon Jan 12 18:05:54 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c: fix problem of last patch
